# libstructpack

./: LICENSE  README.md  libstructpack.c  libstructpack.h  libstructpack_test.c  meson.build  vhd_example.c
.github/workflows/: linux.yml  windows.yml
example/: meson.build  vhd_example.c  vhd_info.c
include/: sp_struct_offsets.h  structpack.h
src/: libstructpack.c  libstructpack.h  meson.build  sp_internal.h  sp_parser.c  sp_parser.h  sp_struct_offsets.h  structpack.c  structpack.h
test/: libstructpack_test.c  meson.build  sp_macro_test.c  sp_parser_test.c  sp_test.h  structpack_test.c
